--- a/be/package.json
+++ b/be/package.json
@@ -20,6 +20,7 @@
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "vuetify": "^2.6.10",
+    "vuetify-confirm": "^2.0.6",
     "vuex": "^3.0.0"
   },
   "devDependencies": {
