--- a/api/.env.example
+++ b/api/.env.example
@@ -50,3 +50,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
+BACKEND_URL=http://localhost:3300
